--- a/chrome-mv3/manifest.json
+++ b/chrome-mv3/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "JDownloader2 Browser Integration",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Intercepts browser downloads and forwards them to JDownloader2",
   "homepage_url": "https://github.com/Lood2222/jdownloader2-browser-integration",
   "permissions": [
@@ -9,7 +9,8 @@
     "storage"
   ],
   "host_permissions": [
-    "http://localhost:3128/*"
+    "http://localhost:3128/*",
+    "<all_urls>"
   ],
   "background": {
     "service_worker": "background.js"
