--- a/chrome-mv2/manifest.json
+++ b/chrome-mv2/manifest.json
@@ -1,17 +1,18 @@
 {
   "manifest_version": 2,
   "name": "JDownloader2 Browser Integration",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Intercepts browser downloads and forwards them to JDownloader2",
   "homepage_url": "https://github.com/Lood2222/jdownloader2-browser-integration",
   "permissions": [
     "downloads",
     "storage",
+    "webRequest",
     "<all_urls>"
   ],
   "background": {
     "scripts": ["background.js"],
-    "persistent": false
+    "persistent": true
   },
   "browser_action": {
     "default_icon": "icons/icon-128.png",
