--- a/chrome-mv3/manifest.json
+++ b/chrome-mv3/manifest.json
@@ -1,12 +1,13 @@
 {
   "manifest_version": 3,
   "name": "JDownloader2 Browser Integration",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Intercepts browser downloads and forwards them to JDownloader2",
   "homepage_url": "https://github.com/Lood2222/jdownloader2-browser-integration",
   "permissions": [
     "downloads",
-    "storage"
+    "storage",
+    "webRequest"
   ],
   "host_permissions": [
     "http://localhost:3128/*",
