--- a/chrome-mv3/manifest.json
+++ b/chrome-mv3/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "JDownloader2 Browser Integration",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "Intercepts browser downloads and forwards them to JDownloader2",
   "homepage_url": "https://github.com/Lood2222/jdownloader2-browser-integration",
   "permissions": [
@@ -19,5 +19,10 @@
   "action": {
     "default_icon": "icons/icon-128.png",
     "default_title": "Send downloads to JDownloader"
+  },
+  "icons": {
+    "16": "icons/icon-128.png",
+    "48": "icons/icon-128.png",
+    "128": "icons/icon-128.png"
   }
 }
