--- a/chrome-mv2/manifest.json
+++ b/chrome-mv2/manifest.json
@@ -1,13 +1,14 @@
 {
   "manifest_version": 2,
   "name": "JDownloader2 Browser Integration",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "Intercepts browser downloads and forwards them to JDownloader2",
   "homepage_url": "https://github.com/Fahaddz/jdownloader2-browser-integration",
   "permissions": [
     "downloads",
     "storage",
     "webRequest",
+    "notifications",
     "<all_urls>"
   ],
   "background": {
