--- a/chrome-mv2/manifest.json
+++ b/chrome-mv2/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "JDownloader2 Browser Integration",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "description": "Intercepts browser downloads and forwards them to JDownloader2",
   "homepage_url": "https://github.com/Fahaddz/jdownloader2-browser-integration",
   "permissions": [
@@ -9,6 +9,7 @@
     "storage",
     "webRequest",
     "notifications",
+    "contextMenus",
     "<all_urls>"
   ],
   "background": {
