--- a/chrome-mv3/manifest.json
+++ b/chrome-mv3/manifest.json
@@ -1,14 +1,15 @@
 {
   "manifest_version": 3,
   "name": "JDownloader2 Browser Integration",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "description": "Intercepts browser downloads and forwards them to JDownloader2",
   "homepage_url": "https://github.com/Fahaddz/jdownloader2-browser-integration",
   "permissions": [
     "downloads",
     "storage",
     "webRequest",
-    "notifications"
+    "notifications",
+    "contextMenus"
   ],
   "host_permissions": [
     "http://localhost:3128/*",
